iptables/iptables.rules
*filter 

#enable SSH input and established output
-A INPUT -p tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT

#enable HTTP input and established output
-A INPUT -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT

#enable HTTPS input and established output
-A INPUT -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT

#enable 2222 input and established output
-A INPUT -p tcp --dport 2222 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 2222 -m state --state ESTABLISHED -j ACCEPT

#attempt at enablling forwarding SSH
#-t nat -A PREROUTING -p tcp -d 127.0.0.1 --dport 22 -j DNAT --to 127.0.0.1:8020

#likely bad forwarding code
-A FORWARD -p tcp -d 127.0.0.1 --dport 8022 -j ACCEPT
-A FORWARD -p tcp -d 127.0.0.1 --dport 8080 -j ACCEPT
-A FORWARD -p tcp -d 127.0.0.1 --dport 8443 -j ACCEPT

#default Drops
-A INPUT -j DROP
-A OUTPUT -j DROP
-A FORWARD -j DROP

COMMIT
