iptables/iptables.test.rules
*filter 
#Default Drops
-A INPUT -j DROP
-A OUTPUT -j DROP
-A FORWARD -j DROP

#enable SSH Input
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -p tcp --dport 2222 -j ACCEPT
-A OUTPUT -p tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT

-A FORWARD -p tcp -d 127.0.0.1 --dport 8022 -j ACCEPT
-A FORWARD -p tcp -d 127.0.0.1 --dport 8080 -j ACCEPT
-A FORWARD -p tcp -d 127.0.0.1 --dport 8443 -j ACCEPT
COMMIT
